--- a/index.html
+++ b/index.html
@@ -15,16 +15,23 @@
 		</div>
 		<div class="main">
 			<ul>
-				<li><strike>Cheez-its</strike></li>
-				<li>Cereal</li>
-				<li><strike>Peace</strike></li>
-				<li><strike>Eggs</strike></li>
-				<li>Spatula</li>
+				<div class="lists">
+					<li class="input"><input type="text" value=""></li>
+					<li><strike>Cheez-its</strike></li>
+					<li>Cereal</li>
+					<li><strike>Peace</strike></li>
+					<li><strike>Eggs</strike></li>
+					<li>Spatula</li>
+				</div>
 			</ul>
 		</div>
 		<div class="add">
 			<h3>Add</h3>
 		</div>
 	</div>
+
+		<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="js/app.js"></script>
+
 </body>
 </html>
