--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 			<h2>Shopping List</h1>
 		</div>
 		<div class="main">
+		<p class="input"><input type="text" value=""></p>
 			<ul>
 				<div class="lists">
-					<li class="input"><input type="text" value=""></li>
 					<li><strike>Cheez-its</strike></li>
 					<li>Cereal</li>
 					<li><strike>Peace</strike></li>
