strike-through added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<h2>Shopping List</h1>
 		</div>
 		<div class="main">
-		<p class="input"><input type="text" value=""></p>
+		<p class="input"><input type="text" value="" autofocus></p>
 			<ul>
 				<div class="lists">
 					<li><strike>Cheez-its</strike></li>
@@ -26,7 +26,7 @@
 			</ul>
 		</div>
 		<div class="add">
-			<h3>Add</h3>
+			<h2>Add</h2>
 		</div>
 	</div>
 
