double-click delete

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<p class="input"><input type="text" value="" autofocus></p>
 			<ul>
 				<div class="lists">
-					<li><strike>Cheez-its</strike></li>
+					<li>Cheez-its</li>
 					<li>Cereal</li>
-					<li><strike>Peace</strike></li>
-					<li><strike>Eggs</strike></li>
+					<li>Peace</li>
+					<li>Eggs</li>
 					<li>Spatula</li>
 				</div>
 			</ul>
