--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<title>Shopping List</title>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic' rel='stylesheet' type='text/css'>	
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="container">
 		<div class="header">
-			<h2>Shopping List</h1>
 		</div>
 		<div class="main">
-		<p class="input"><input type="text" value="" autofocus></p>
+			<i class="fa fa-shopping-cart fa-5x" style="color:white;">
+			</i>
+			<form action="" method="post" class="listForm">
+			<input type="text" class="item" autofocus>
+			<input type="submit" value="submit">
+			</form>
+			<p class="input">
+			<input type="text" value="" autofocus>
+			</p>
 			<ul>
 				<div class="lists">
 					<li>Cheez-its</li>
@@ -25,9 +35,9 @@
 				</div>
 			</ul>
 		</div>
-		<div class="add">
-			<h2>Add</h2>
-		</div>
+<!-- 		<div class="add">
+			<h2><a href="#" class="addLink">Add item</a></h2>
+		</div> -->
 	</div>
 
 		<script src="https://code.jquery.com/jquery.min.js"></script>
