--- a/index.html
+++ b/index.html
@@ -12,33 +12,60 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+			
+<!-- Information -->
+		<a class="close" href="#">
+			<div class="overlay" id="modal">
+				
+					<h3>Couldn't figure it out?</h3>
+					<h4>That's disapointing.</h4>
+			</div>
+		</a>
+
+<!-- MAIN PAGE-->
 	<div class="container">
 		<div class="header">
 		</div>
 		<div class="main">
+			<div class="cart">
 			<i class="fa fa-shopping-cart fa-5x" style="color:white;">
 			</i>
-			<form action="" method="post" class="listForm">
-			<input type="text" class="item" autofocus>
-			<input type="submit" value="submit">
-			</form>
+			</div>
+
 			<p class="input">
-			<input type="text" value="" autofocus>
+				<form action="" method="post" class="listForm">
+				<input type="text" class="item" placeholder="tap here to add an item">
+<!-- 				<input type="submit" class= "submit" value="+"> -->
+				</form>
 			</p>
 			<ul>
 				<div class="lists">
-					<li>Cheez-its</li>
-					<li>Cereal</li>
-					<li>Peace</li>
-					<li>Eggs</li>
-					<li>Spatula</li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+					<br><br><br><br><br>
 				</div>
 			</ul>
 		</div>
-<!-- 		<div class="add">
-			<h2><a href="#" class="addLink">Add item</a></h2>
-		</div> -->
-	</div>
+		<div class="add">
+			<h2>
+				<a class="what"  href="#">
+
+
+				<span class="fa-stack fa-sm">
+
+
+				  <!-- <i class="fa fa-circle-o fa-stack-2x"style="color:white;"></i> -->
+
+					<i class="fa fa-question fa-stack-1x" style="color:white;">
+			</i>
+			</span>
+				</a>
+			</h2>
+		</div>
+
 
 		<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
